tests/baselines/reference/tupleLengthCheck.errors.txt
tests/cases/conformance/types/tuple/tupleLengthCheck.ts(5,14): error TS2493: Tuple type '[number, string]' of length '2' has no element at index '2'.
tests/cases/conformance/types/tuple/tupleLengthCheck.ts(6,14): error TS2493: Tuple type '[number, string]' of length '2' has no element at index '1000'.


==== tests/cases/conformance/types/tuple/tupleLengthCheck.ts (2 errors) ====
    declare const a: [number, string]
    declare const rest: [number, string, ...boolean[]]
    
    const a1 = a[1]
    const a2 = a[2]
                 ~
!!! error TS2493: Tuple type '[number, string]' of length '2' has no element at index '2'.
    const a3 = a[1000]
                 ~~~~
!!! error TS2493: Tuple type '[number, string]' of length '2' has no element at index '1000'.
    
    const a4 = rest[1]
    const a5 = rest[2]
    const a6 = rest[3]
    const a7 = rest[1000]
    